third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart


  late final _TfLiteTensorNumDimsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteTensor>)>
      >('TfLiteTensorNumDims');
  late final _TfLiteTensorNumDims =
      _TfLiteTensorNumDimsPtr.asFunction<
        int Function(ffi.Pointer<TfLiteTensor>)
      >();

  /// Returns the length of the tensor in the "dim_index" dimension.
  /// REQUIRES: 0 <= dim_index < TFLiteTensorNumDims(tensor)
  int TfLiteTensorDim(ffi.Pointer<TfLiteTensor> tensor, int dim_index) {
    return _TfLiteTensorDim(tensor, dim_index);
  }

  late final _TfLiteTensorDimPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<TfLiteTensor>, ffi.Int32)
        >
      >('TfLiteTensorDim');
  late final _TfLiteTensorDim =
      _TfLiteTensorDimPtr.asFunction<
        int Function(ffi.Pointer<TfLiteTensor>, int)
      >();

  /// Returns the size of the underlying data in bytes.
  int TfLiteTensorByteSize(ffi.Pointer<TfLiteTensor> tensor) {
    return _TfLiteTensorByteSize(tensor);
  }

  late final _TfLiteTensorByteSizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<TfLiteTensor>)>>(
        'TfLiteTensorByteSize',
      );
  late final _TfLiteTensorByteSize =
      _TfLiteTensorByteSizePtr.asFunction<
        int Function(ffi.Pointer<TfLiteTensor>)
      >();

  /// Returns a pointer to the underlying data buffer.
  ///
  /// \note The result may be null if tensors have not yet been allocated, e.g.,
  /// if the Tensor has just been created or resized and `TfLiteAllocateTensors()`
  /// has yet to be called, or if the output tensor is dynamically sized and the
  /// interpreter hasn't been invoked.
  ffi.Pointer<ffi.Void> TfLiteTensorData(ffi.Pointer<TfLiteTensor> tensor) {
    return _TfLiteTensorData(tensor);
  }

  late final _TfLiteTensorDataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<TfLiteTensor>)
        >
      >('TfLiteTensorData');
  late final _TfLiteTensorData =
      _TfLiteTensorDataPtr.asFunction<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<TfLiteTensor>)
      >();

  /// Returns the (null-terminated) name of the tensor.
  ffi.Pointer<ffi.Char> TfLiteTensorName(ffi.Pointer<TfLiteTensor> tensor) {
    return _TfLiteTensorName(tensor);
  }

  late final _TfLiteTensorNamePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<TfLiteTensor>)
        >
      >('TfLiteTensorName');
  late final _TfLiteTensorName =
      _TfLiteTensorNamePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<TfLiteTensor>)
      >();

  /// Returns the parameters for asymmetric quantization. The quantization
  /// parameters are only valid when the tensor type is `kTfLiteUInt8` and the
  /// `scale != 0`. Quantized values can be converted back to float using:
  /// real_value = scale * (quantized_value - zero_point);
  TfLiteQuantizationParams TfLiteTensorQuantizationParams(
    ffi.Pointer<TfLiteTensor> tensor,
  ) {
    return _TfLiteTensorQuantizationParams(tensor);
  }

  late final _TfLiteTensorQuantizationParamsPtr =
      _lookup<
        ffi.NativeFunction<
          TfLiteQuantizationParams Function(ffi.Pointer<TfLiteTensor>)
        >
      >('TfLiteTensorQuantizationParams');
  late final _TfLiteTensorQuantizationParams =
      _TfLiteTensorQuantizationParamsPtr.asFunction<
        TfLiteQuantizationParams Function(ffi.Pointer<TfLiteTensor>)
      >();

  /// Copies from the provided input buffer into the tensor's buffer.
  /// REQUIRES: input_data_size == TfLiteTensorByteSize(tensor)
  int TfLiteTensorCopyFromBuffer(
    ffi.Pointer<TfLiteTensor> tensor,
    ffi.Pointer<ffi.Void> input_data,
    int input_data_size,
  ) {
    return _TfLiteTensorCopyFromBuffer(tensor, input_data, input_data_size);
  }

  late final _TfLiteTensorCopyFromBufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteTensor>,
            ffi.Pointer<ffi.Void>,
            ffi.Size,
          )
        >
      >('TfLiteTensorCopyFromBuffer');
  late final _TfLiteTensorCopyFromBuffer =
      _TfLiteTensorCopyFromBufferPtr.asFunction<
        int Function(ffi.Pointer<TfLiteTensor>, ffi.Pointer<ffi.Void>, int)
      >();

  /// Copies to the provided output buffer from the tensor's buffer.
  /// REQUIRES: output_data_size == TfLiteTensorByteSize(tensor)
  int TfLiteTensorCopyToBuffer(
    ffi.Pointer<TfLiteTensor> output_tensor,
    ffi.Pointer<ffi.Void> output_data,
    int output_data_size,
  ) {
    return _TfLiteTensorCopyToBuffer(
      output_tensor,
      output_data,
      output_data_size,
    );
  }

  late final _TfLiteTensorCopyToBufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteTensor>,
            ffi.Pointer<ffi.Void>,
            ffi.Size,
          )
        >
      >('TfLiteTensorCopyToBuffer');
  late final _TfLiteTensorCopyToBuffer =
      _TfLiteTensorCopyToBufferPtr.asFunction<
        int Function(ffi.Pointer<TfLiteTensor>, ffi.Pointer<ffi.Void>, int)
      >();

  /// Changes the size of the data buffer owned by `tensor` to `num_bytes`.
  ///
  /// Tensors with allocation types other than `kTfLiteDynamic` will be ignored
  /// and `kTfLiteOk` will be returned. Returns `kTfLiteError` for null tensor
  /// or allocation failure.
  ///
  /// Required for writing string tensors, whose buffer size is determined by
  /// the encoded string data rather than by a fixed element size.
  int TfLiteTensorRealloc(int num_bytes, ffi.Pointer<TfLiteTensor> tensor) {
    return _TfLiteTensorRealloc(num_bytes, tensor);
  }

  late final _TfLiteTensorReallocPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Size, ffi.Pointer<TfLiteTensor>)
        >
      >('TfLiteTensorRealloc');
  late final _TfLiteTensorRealloc =
      _TfLiteTensorReallocPtr.asFunction<
        int Function(int, ffi.Pointer<TfLiteTensor>)
      >();

  /// Destroys the signature runner.
  ///
  /// If `signature_runner` is a null pointer, this function has no effect.
  void TfLiteSignatureRunnerDelete(
    ffi.Pointer<TfLiteSignatureRunner> signature_runner,
  ) {
    return _TfLiteSignatureRunnerDelete(signature_runner);
  }

  late final _TfLiteSignatureRunnerDeletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<TfLiteSignatureRunner>)
        >
      >('TfLiteSignatureRunnerDelete');
  late final _TfLiteSignatureRunnerDelete =
      _TfLiteSignatureRunnerDeletePtr.asFunction<
        void Function(ffi.Pointer<TfLiteSignatureRunner>)
      >();

  /// --------------------------------------------------------------------------
  /// Resets all variable tensors to zero.
  ///
  /// WARNING: This is an experimental API and subject to change.
  int TfLiteInterpreterResetVariableTensors(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterResetVariableTensors(interpreter);
  }

  late final _TfLiteInterpreterResetVariableTensorsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterResetVariableTensors');
  late final _TfLiteInterpreterResetVariableTensors =
      _TfLiteInterpreterResetVariableTensorsPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns the number of variable tensors associated with the model.
  int TfLiteInterpreterGetVariableTensorCount(
    ffi.Pointer<TfLiteInterpreter> interpreter,
  ) {
    return _TfLiteInterpreterGetVariableTensorCount(interpreter);
  }

  late final _TfLiteInterpreterGetVariableTensorCountPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<TfLiteInterpreter>)>
      >('TfLiteInterpreterGetVariableTensorCount');
  late final _TfLiteInterpreterGetVariableTensorCount =
      _TfLiteInterpreterGetVariableTensorCountPtr.asFunction<
        int Function(ffi.Pointer<TfLiteInterpreter>)
      >();

  /// Returns the tensor associated with the variable tensor index.
  /// REQUIRES: 0 <= input_index <
  /// TfLiteInterpreterGetVariableTensorCount(interpreter)
  ffi.Pointer<TfLiteTensor> TfLiteInterpreterGetVariableTensor(
    ffi.Pointer<TfLiteInterpreter> interpreter,
    int variable_index,
  ) {
    return _TfLiteInterpreterGetVariableTensor(interpreter, variable_index);
  }

  late final _TfLiteInterpreterGetVariableTensorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<TfLiteTensor> Function(
            ffi.Pointer<TfLiteInterpreter>,
            ffi.Int32,
          )
        >
      >('TfLiteInterpreterGetVariableTensor');
  late final _TfLiteInterpreterGetVariableTensor =
      _TfLiteInterpreterGetVariableTensorPtr.asFunction<
        ffi.Pointer<TfLiteTensor> Function(ffi.Pointer<TfLiteInterpreter>, int)
      >();

  /// Adds an op registration for a builtin operator.
  ///
  /// Op registrations are used to map ops referenced in the flatbuffer model
  /// to executable function pointers (`TfLiteRegistration`s).
  ///
  /// NOTE: The interpreter will make a shallow copy of `registration` internally,
  /// so the caller should ensure that its contents (function pointers, etc...)
  /// remain valid for the duration of the interpreter's lifetime. A common
  /// practice is making the provided `TfLiteRegistration` instance static.
  ///
  /// Code that uses this function should NOT call
  /// `TfLiteInterpreterOptionsSetOpResolver` (or related functions) on the same
  /// options object.
  ///
  /// WARNING: This is an experimental API and subject to change.
  void TfLiteInterpreterOptionsAddBuiltinOp(
    ffi.Pointer<TfLiteInterpreterOptions> options,
    int op,
    ffi.Pointer<TfLiteRegistration> registration,
    int min_version,
    int max_version,
  ) {
    return _TfLiteInterpreterOptionsAddBuiltinOp(
      options,
      op,
      registration,
      min_version,
      max_version,
    );
  }

  late final _TfLiteInterpreterOptionsAddBuiltinOpPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteInterpreterOptions>,
            ffi.Int32,
            ffi.Pointer<TfLiteRegistration>,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('TfLiteInterpreterOptionsAddBuiltinOp');
  late final _TfLiteInterpreterOptionsAddBuiltinOp =
      _TfLiteInterpreterOptionsAddBuiltinOpPtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteInterpreterOptions>,
          int,
          ffi.Pointer<TfLiteRegistration>,
          int,
          int,
        )
      >();

  /// Adds an op registration for a custom operator.
  ///
  /// Op registrations are used to map ops referenced in the flatbuffer model
  /// to executable function pointers (`TfLiteRegistration`s).
  ///
  /// NOTE: The interpreter will make a shallow copy of `registration` internally,
  /// so the caller should ensure that its contents (function pointers, etc...)
  /// remain valid for the duration of any created interpreter's lifetime. A
  /// common practice is making the provided `TfLiteRegistration` instance static.
  ///
  /// The lifetime of the string pointed to by `name` must be at least as long
  /// as the lifetime of the `TfLiteInterpreterOptions`.
  ///
  /// Code that uses this function should NOT call
  /// `TfLiteInterpreterOptionsSetOpResolver` (or related functions) on the same
  /// options object.
  ///
  /// WARNING: This is an experimental API and subject to change.
  void TfLiteInterpreterOptionsAddCustomOp(
    ffi.Pointer<TfLiteInterpreterOptions> options,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<TfLiteRegistration> registration,
    int min_version,
    int max_version,
  ) {
    return _TfLiteInterpreterOptionsAddCustomOp(
      options,
      name,
      registration,
      min_version,
      max_version,
    );
  }
